--- a/views/index.html
+++ b/views/index.html
@@ -32,6 +32,7 @@
 </head>
 
 <body>
+    <div class="jumbotron-fluid">
     <main id="app">
         <div class="form-container">
             <label for="nickname">
@@ -67,6 +68,7 @@
             </ul>
         </div>
 
+    </div>
     </main>
 
     <!-- JAVASCRIPT FILES START HERE -->
