--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,9 @@
 @import '_vars';
 @import 'modules/_message';
 
+.helperBox {
+	background-color: white !important;
+}
 
 /* reset */
 * {
@@ -13,6 +16,7 @@ html,
 body {
 	height: 100%;
 }
+
 
 body {
 	font: 16px Helvetica, Arial;
@@ -29,29 +33,6 @@ main {
 	/* Chrome 10-25, Safari 5.1-6 */
 	background: linear-gradient(to left, #CFDEF3, #E0EAFC);
 	/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-}
-
-.form-container,
-.messages {
-	padding: 20px;
-}
-
-.form-container {
-	flex: 1;
-	background: #E0EAFC;
-	/* fallback for old browsers */
-	background: -webkit-linear-gradient(to right, #CFDEF3, #E0EAFC);
-	/* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to right, #CFDEF3, #E0EAFC);
-	/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-	font-weight: bold;
-	border-radius: 4em;
-	border-color: #CFDEF3 4px;
-
-	label {
-		display: block;
-		margin-bottom: 0.5rem;
-	}
 }
 
 .messages {
@@ -77,9 +58,9 @@ textarea {
 	border-style: solid;
 	background: #FFEFBA;
 	/* fallback for old browsers */
-	background: -webkit-linear-gradient(to right, #FFFFFF, #FFEFBA);
+	background: -webkit-linear-gradient(to right, #FFFFFF, #FFFFFF);
 	/* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to right, #FFFFFF, #FFEFBA);
+	background: linear-gradient(to right, #FFFFFF, #FFFFFF);
 	/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 }
