--- a/views/index.html
+++ b/views/index.html
@@ -2,94 +2,109 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Chat App</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title>Chat App</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="css/main.css" />
+  <link href="https://fonts.googleapis.com/css?family=Caveat&display=swap" rel="stylesheet">
+  <!--animate.css plugin-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.css"
+    integrity="sha256-a2tobsqlbgLsWs7ZVUGgP5IvWZsx8bTNQpzsqCSm5mk=" crossorigin="anonymous" />
+  <!--end of animate.css plugin-->
 
-    <!--animate.css plugin-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.css" integrity="sha256-a2tobsqlbgLsWs7ZVUGgP5IvWZsx8bTNQpzsqCSm5mk=" crossorigin="anonymous" />
-    <!--end of animate.css plugin-->
+  <!--WOW JS plugin-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"
+    integrity="sha256-399DNRyfIpWIy1ZV0KmEIIuIQ5sBHdLu9MBtVHrNtt8=" crossorigin="anonymous"></script>
+  <!--end of WOW JS plugin-->
 
-    <!--WOW JS plugin-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js" integrity="sha256-399DNRyfIpWIy1ZV0KmEIIuIQ5sBHdLu9MBtVHrNtt8=" crossorigin="anonymous"></script>
-    <!--end of WOW JS plugin-->
+  <!--MD BOOTSTRAP -->
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" />
+  <!-- Google Fonts -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+  <!-- Bootstrap core CSS -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" />
+  <!-- Material Design Bootstrap -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.14.1/css/mdb.min.css" rel="stylesheet" />
 
-    <!--MD BOOTSTRAP -->
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-    <!-- Google Fonts -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
-    <!-- Bootstrap core CSS -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Material Design Bootstrap -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.14.1/css/mdb.min.css" rel="stylesheet">
-
-    <!-- Vue JS -->
-    <script src="https://unpkg.com/vue"></script>
-
+  <!-- Vue JS -->
+  <script src="https://unpkg.com/vue"></script>
 </head>
 
 <body>
-    <div class="jumbotron-fluid">
-    <main id="app">
-        <div class="form-container">
-            <label for="nickname">
-                <h4>Nickname</h4>
-            </label>
-            <input v-model="nickname" type="text" id="nickname" class="nickname" placeholder="What is your nickname?">
+  <main id="app">
+    <div class="container">
+      <div class="mt-5 jumbotron">
 
-            <form>
-                <label for="message">
-                    <h4>Your Message</h4>
-                </label>
-                <textarea v-model="message" class="message" type="text" autocomplete="off" id="textarea"></textarea>
-                <input type="submit" @click.prevent="dispatchMessage">
-            </form>
+          <h1 class="text-center display-5">Welcome to Chat App!</h1>
+          <div style="border-radius:10px;" class="my-2 px-2 text-center peach-gradient text-white" id="notifications" v-for="notification in notifications">
+                {{ notification }}
+          </div>
 
-            <p v-if="typing">{{typing}} is typing...</p>
-            <div v-if="typing">
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
+
+        <div class="row">
+          <div class="my-2 col-md-12 helperBox">
+
+            <div class="messages">
+              <ul id="messages" v-for="message in messages">
+                <!-- render a new component for every message -->
+                <newmessage :msg="message" class="wow bounceInLeft text-black"></newmessage>
+              </ul>
             </div>
 
-
-
+          </div>
         </div>
 
-        <div class="messages">
-            <p id="notifications" v-for="notification in notifications">
-                <i>{{ notification }}</i></p>
-            <ul id="messages" v-for="message in messages">
-                <!-- render a new component for every message -->
-                <newmessage :msg="message" class="wow bounceInLeft"></newmessage>
-            </ul>
+        <div class="row">
+          <div class="my-2 col-md-12 helperBox">
+                <p class="mt-3 text-center" v-if="typing">{{typing}} is typing...</p>
+                <div v-if="typing">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                </div>
+            <label for="nickname">
+              <h4>Nickname</h4>
+            </label>
+
+            <input v-model="nickname" type="text" id="nickname" class="nickname" placeholder="What's your nickname?">
+
+            <form>
+              <label for="message">
+                <h4>Your Message</h4>
+              </label>
+              <textarea v-model="message" class="message" placeholder="Type your message here..." type="text" autocomplete="off" id="textarea"></textarea>
+              <button type="submit" @click.prevent="dispatchMessage" class="btn peach-gradient btn-lg btn-block">SEND</button>
+            </form>
+
+          </div>
         </div>
 
+      </div>
     </div>
-    </main>
+  </main>
 
-    <!-- JAVASCRIPT FILES START HERE -->
-    <!-- Other JS -->
-    <script src="/socket.io/socket.io.js"></script>
-    <script type="module" src="js/main_vm.js"></script>
+  <!-- JAVASCRIPT FILES START HERE -->
+  <!-- Other JS -->
+  <script src="/socket.io/socket.io.js"></script>
+  <script type="module" src="js/main_vm.js"></script>
 
-    <!--MD BOOTSTRAP -->
-        <!-- JQuery -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <!-- Bootstrap tooltips -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
-    <!-- Bootstrap core JavaScript -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.14.1/js/mdb.min.js"></script>
+  <!--MD BOOTSTRAP -->
+  <!-- JQuery -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <!-- Bootstrap tooltips -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js">
+  </script>
+  <!-- Bootstrap core JavaScript -->
+  <script type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
+  <!-- MDB core JavaScript -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.14.1/js/mdb.min.js"></script>
 
-    <script>
-        new WOW().init();
-        </script>
+  <script>
+    new WOW().init();
+  </script>
 </body>
 
 </html>
