added even more fancy styling

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,9 +17,13 @@ body {
 	height: 100%;
 }
 
+#chatapp{
+	color: #ed7663;
+	font-family: 'Fredoka One', cursive;
+}
 
 body {
-	font: 16px Helvetica, Arial;
+	font-family: 'Montserrat', sans-serif;
 }
 
 main {
