--- a/sass/modules/_message.scss
+++ b/sass/modules/_message.scss
@@ -6,7 +6,7 @@
     //background: $lightblue;  /* fallback for old browsers */
     background: #f1f0f0;  /* Chrome 10-25, Safari 5.1-6 */
     background: #f1f0f0; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    font-family: 'Roboto Mono', monospace;
+    font-family: 'Montserrat', sans-serif;
     border-radius: 8px;
     margin-bottom: 1rem;
 
@@ -19,8 +19,7 @@
     //background: #ddd6f3;  /* fallback for old browsers */
     background: #0092ff;  /* Chrome 10-25, Safari 5.1-6 */
     background: #0092ff;
-    font-family: 'Roboto Mono', monospace;
-
+    font-family: 'Montserrat', sans-serif;
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     
     color: white;
